<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">问答</string>
    <string name="hello_world">HelloWord</string>

    <string name="question_text">北京是中国的领土吗？</string>
    <string name="question_text0">1.香港是中国的领土吗？</string>
    <string name="question_text1">2.台湾是中国的领土吗？</string>
    <string name="question_text2">3.钓鱼岛是中国的领土吗？</string>
    <string name="question_text3">4.新疆是中国的领土吗？</string>
    <string name="question_text4">5.美国是中国的领土吗？</string>
    <string name="question_text5">6.1+1=3？</string>

    <string name="true_button">是</string>
    <string name="false_button">否</string>

    <string name="prev_button">上一个</string>
    <string name="next_button">下一个</string>

    <string name="correct_toast">正确！</string>
    <string name="incorrect_toast">错误！</string>

    <string name="cheat_button">作弊!</string>
    <string name="warning_text">您确定要执行此操作?</string>
    <string name="show_answer_button">显示答案!</string>
    <string name="judgment_toast">作弊是不对的!</string>
    <string name="incorrect_judgement_toast">不作弊很好，要坚持独立解决！</string>

    <string name="menu_settings">Settings</string>
</resources>
